# circle_odometry

./: .README.md.un~  .gitignore  CMakeLists.txt  README.md  README.md~  package.xml
config/: aces-config.yaml  csail-config.yaml  deutsches-config.yaml  fr079-config.yaml  intel-config.yaml  magzino-config.yaml  mir-config.yaml  mitkillian-config.yaml  pepperl-config-1hz.yaml  pepperl-config.yaml
include/: TicToc.h  circle_odometry.h  common.h  fstruct.h  histogram.h  line_feature.h  plane_extraction.h  plane_pairing.h  solver.h
launch/: bag_circle_odometry.launch  circle_odometry.launch  circle_odometry_benchmark.launch  circle_odometry_deutsches_benchmark.launch  circle_odometry_magzino_benchmark.launch  circle_odometry_mir_benchmark.launch
nodes/: circle_odometry_node.cpp  rosbag_circle_odometry_node.cpp
rviz_cfg/: circle_odom.rviz
src/: Visualizer.cpp  circle_odometry.cpp  histogram.cpp  line_feature.cpp  plane_extraction.cpp  plane_pairing.cpp  solver.cpp
